@startuml DriveHub

title TP - Programacion 2 - DriveHub


class SistemaEmpresa {
    - vehiculos: Vehiculo[]
    - reservas: Reserva[]
    - gestorReserva: GestorReserva
    - gestorVehiculo: GestorVehiculo
    - gestorMantenimiento: GestorMantenimiento
    - gestorKilometraje: GestorKilometraje
}

class Reserva {
    - kmsRecorridos: number
    - vehiculo: Vehiculo
    - cliente: Cliente
    - fechaInicio: Date
    - fechaFin: Date
    - temporada: Temporada
    + calcularTotal(): number
    + validarFecha(): boolean
}

class Cliente {
    - nombreCompleto: string
    - id: number
    'El cliente puede instanciarse sin reserva por parametro, 
    'podemos setearla luego cuando se le asigna la reserva
    - reserva: Reserva
    + solicitarReserva(r: Reserva, s: Sistema): void  
}

'Herencia Vehiculo a sus clases hijas
abstract class Vehiculo {
    - tarifaBase: number
    'Podria haber una clase cargo que nos permita manejar de manera
    'abstracta los cargos y luego en vehiculo tener una lista de cargos
    'que pueden ser variables o fijos y el dia de mañana 
    'para flexibilizar mas la solucion si se agregan nuevos vehiculos??
    - cargoVariable: number
    - cargoFijo: number
    - kilometraje: number
    - matricula: string
    - estado: Estado
    - mantenimientos: MantenimientoVehiculo[]
    + agregarManteniminentoVehiculo(mantenimiento: MantenimientoVehiculo): void
    + abstract calcularTarifa(reserva:Reserva): number
    + Vehiculo(estadoInicial: Estado): void
    + cambiarEstado(nuevoEstado: Estado): void
    + alquilar (): void
    + devolver(): void
    + enviarAMantenimiento(): void
    + finalizarMantenimiento(): void
    + enviarAlimpiar(): void
    + finalizarLimpieza(): void
}

class Compacto {
    + calcularTarifa(reserva:Reserva): number
}

class Sedan {
    + calcularTarifa(reserva:Reserva): number
}

class Suv {
    + calcularTarifa(reserva:Reserva): number
}

'Atributo del vehiculo
class MantenimientoVehiculo {
    - costoMantenimiento: number
    - fecha: Date
}

class GestorVehiculo {
    + buscarVehiculo(matricula: string, lista: Vehiculo[]): Vehiculo
    + agregar<T>(item: T, lista: Array<T>): void
    + eliminar<T>(item: T, lista: Array<T>): void
}

'Implementacion del patro state para el estado del vehiculo
interface Estado{
    + alquilar (): void
    + devolver(): void
    + enviarAMantenimiento(): void
    + finalizarMantenimiento(): void
    + enviarAlimpiar(): void
    + finalizarLimpieza(): void
   
}

class Disponible {
    - vehiculo: Vehiculo
    + setVehiculo(vehiculo: Vehiculo):void
    + alquilar (): void
    + devolver(): void
    + enviarAMantenimiento(): void
    + finalizarMantenimiento(): void
    + enviarAlimpiar(): void
    + finalizarLimpieza(): void
    
}

class EnAlquiler {   
    - vehiculo: Vehiculo
    + setVehiculo(vehiculo: Vehiculo):void
    + alquilar (): void
    + devolver(): void
    + enviarAMantenimiento(): void
    + finalizarMantenimiento(): void
    + enviarAlimpiar(): void
    + finalizarLimpieza(): void
    
}

class EnMantenimiento {
    - vehiculo: Vehiculo
    + setVehiculo(vehiculo: Vehiculo):void
    + alquilar (): void
    + devolver(): void
    + enviarAMantenimiento(): void
    + finalizarMantenimiento(): void
    + enviarAlimpiar(): void
    + finalizarLimpieza(): void
    
}

class NecesitaLimpieza {
    - vehiculo: Vehiculo
    + setVehiculo(vehiculo: Vehiculo):void
    + alquilar (): void
    + devolver(): void
    + enviarAMantenimiento(): void
    + finalizarMantenimiento(): void
    + enviarAlimpiar(): void
    + finalizarLimpieza(): void
    
}

class GestorReserva {
    + hayDisponibilidad(r: Reserva): boolean  
    ' Valida la disponibilidad del vehículo para las fechas solicitadas
    + calcularTotal(r: Reserva): number  
    ' Podriamos calcular el total usando calcularCostoVariable() del vehiculo y sumar la tarifa base 
    ' (y costo fijo) aca, para que el vehiculo solo calcule su costo variable y no el total de la reserva
}

class GestorKilometraje {
    + calcularKmsRecorridos(reserva:Reserva): number  
    ' Calcula los kms recorridos en una reserva (kmFinal - kmInicial)
    ' Esto lo sacaría tal vez y haría que Reserva tenga un método kmsRecorridos() que los calcule
    ' ya que ella misma posee kmInicial y kmFinal (seteado despues), y que calcularTotal() en GestionReserva llame a ese método
}

class GestorMantenimiento {
    + registrarMantenimiento(v: Vehiculo, m: Mantenimiento): void  
    ' Si mas adelante nos solicita podemos ver si el auto requiere o no mantenimiento
    ' Le agrega un mantenimiento a un vehiculo
    ' Vehiculo podría tener un array de mantenimentos (tipo Mantenimiento) para tener registrados todos los que se le hacen
    ' Objeto mantenimento tiene fecha y costo (simil estructura de datos)
}

interface ABM {
    agregar<T>(item: T, lista: Array<T>): void;
    eliminar<T>(item: T, lista: Array<T>): void;
}

interface Temporada {
    calcTarifaBase(tarifa: number): number
}

class TempAlta {
}

class TempMedia {
}

class TempBaja {  
}

'Relaciones:

'Herencia
Vehiculo <|-- Sedan
Vehiculo <|-- Suv
Vehiculo <|-- Compacto

'Atributos de vehiculo
Vehiculo --> MantenimientoVehiculo
Vehiculo *-r- Estado

'Composición
Reserva *-r- Cliente
Reserva *-- Vehiculo
Reserva *-- Temporada
SistemaEmpresa *-- Vehiculo
SistemaEmpresa *-- Reserva
SistemaEmpresa *-- GestorReserva
SistemaEmpresa *-r- GestorKilometraje
SistemaEmpresa *-u- GestorMantenimiento
SistemaEmpresa *-l- GestorVehiculo

'Implementacion interfaces:
ABM <|.u. GestorReserva
ABM <|.u. GestorVehiculo
Temporada <|.. TempAlta
Temporada <|.. TempMedia
Temporada <|.. TempBaja


Disponible .d.|> Estado
EnAlquiler ..|> Estado
EnMantenimiento .l.|> Estado
NecesitaLimpieza .u.|> Estado


@enduml